ensure overflow-y is set on the devise view container

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,6 +1,7 @@
 .devise {
   font-size: 17px;
   line-height: 20px;
+  overflow-y: auto;
 
   h1 {
     font-family: Pathway Gothic One;
